[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/camera.gd" type="Script" id=1]
[ext_resource path="res://map/Tile1.tres" type="TileSet" id=2]
[ext_resource path="res://player/keiki.tscn" type="PackedScene" id=3]
[ext_resource path="res://zone/zone1/stage09.gd" type="Script" id=4]
[ext_resource path="res://enemy/Haniwa_guard/haniwa_guard.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 56 )

[node name="stage09" type="Node2D"]
script = ExtResource( 4 )

[node name="MainMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1441808, 0, 131073, -1441807, 0, 131073, -1441806, 0, 131073, -1441805, 0, 131073, -1441804, 0, 131073, -1441803, 0, 131073, -1441802, 0, 131073, -1441801, 0, 131073, -1441800, 0, 131073, -1441799, 0, 131073, -1441798, 0, 131073, -1441797, 0, 131073, -1441796, 0, 131073, -1441795, 0, 131073, -1441794, 0, 131073, -1441793, 0, 131073, -1507328, 0, 131073, -1507327, 0, 131073, -1507326, 0, 131073, -1507325, 0, 131073, -1507324, 0, 5, -1507323, 0, 65540, -1507322, 0, 65540, -1376272, 0, 65540, -1376271, 0, 65540, -1376270, 0, 65540, -1376269, 0, 65540, -1376268, 0, 65540, -1376267, 0, 65540, -1376266, 0, 65540, -1376265, 0, 65540, -1376264, 0, 65540, -1376263, 0, 65540, -1376262, 0, 65540, -1376261, 0, 65540, -1376260, 0, 65540, -1376259, 0, 65540, -1376258, 0, 65540, -1376257, 0, 65540, -1441792, 0, 65540, -1441791, 0, 65540, -1441790, 0, 65540, -1441789, 0, 65540, -1441788, 0, 65536, -1441787, 0, 65540, -1441786, 0, 65540, -1310736, 0, 65540, -1310735, 0, 65540, -1310734, 0, 65540, -1310733, 0, 65540, -1310732, 0, 65540, -1310731, 0, 65540, -1310730, 0, 65540, -1310729, 0, 65540, -1310728, 0, 65540, -1310727, 0, 65540, -1310726, 0, 65540, -1310725, 0, 65540, -1310724, 0, 65540, -1310723, 0, 65540, -1310722, 0, 65540, -1310721, 0, 65540, -1376256, 0, 65540, -1376255, 0, 65540, -1376254, 0, 65540, -1376253, 0, 65540, -1376252, 0, 65536, -1376251, 0, 65540, -1376250, 0, 65540, -1245200, 0, 1, -1245199, 0, 1, -1245198, 0, 1, -1245197, 0, 1, -1245196, 0, 1, -1245195, 0, 1, -1245194, 0, 1, -1245193, 0, 1, -1245192, 0, 1, -1245191, 0, 1, -1245190, 0, 196610, -1245189, 0, 65540, -1245188, 0, 65540, -1245187, 0, 65540, -1245186, 0, 65540, -1245185, 0, 65540, -1310720, 0, 65540, -1310719, 0, 65540, -1310718, 0, 65540, -1310717, 0, 65540, -1310716, 0, 65536, -1310715, 0, 65540, -1310714, 0, 65540, -1179664, 0, 65540, -1179663, 0, 65540, -1179662, 0, 131075, -1179661, 0, 1, -1179660, 0, 1, -1179659, 0, 1, -1179658, 0, 1, -1179657, 0, 1, -1179656, 0, 1, -1179655, 0, 1, -1179654, 0, 1, -1179653, 0, 1, -1179652, 0, 1, -1179651, 0, 2, -1179650, 0, 65540, -1179649, 0, 65540, -1245184, 0, 65540, -1245183, 0, 65540, -1245182, 0, 65540, -1245181, 0, 65540, -1245180, 0, 65536, -1245179, 0, 65540, -1245178, 0, 65540, -1114128, 0, 65540, -1114127, 0, 65540, -1114126, 0, 131075, -1114125, 0, 1, -1114124, 0, 131073, -1114123, 0, 131073, -1114122, 0, 131073, -1114121, 0, 131073, -1114120, 0, 131073, -1114119, 0, 65540, -1114118, 0, 65540, -1114117, 0, 65540, -1114116, 0, 65540, -1114115, 0, 65540, -1114114, 0, 65540, -1114113, 0, 65540, -1179648, 0, 65540, -1179647, 0, 65540, -1179646, 0, 65540, -1179645, 0, 65540, -1179644, 0, 65536, -1179643, 0, 65540, -1179642, 0, 65540, -1048592, 0, 65540, -1048591, 0, 65540, -1048590, 0, 65540, -1048589, 0, 65538, -1048588, 0, 65540, -1048587, 0, 65540, -1048586, 0, 65540, -1048585, 0, 65540, -1048584, 0, 65540, -1048583, 0, 65540, -1048582, 0, 65540, -1048581, 0, 65540, -1048580, 0, 65540, -1048579, 0, 65540, -1048578, 0, 65540, -1048577, 0, 65540, -1114112, 0, 65540, -1114111, 0, 65540, -1114110, 0, 65540, -1114109, 0, 65540, -1114108, 0, 65536, -1114107, 0, 65540, -1114106, 0, 65540, -983056, 0, 65540, -983055, 0, 65540, -983054, 0, 65540, -983053, 0, 65538, -983052, 0, 65540, -983051, 0, 65540, -983050, 0, 65540, -983049, 0, 65540, -983048, 0, 65540, -983047, 0, 65540, -983046, 0, 131075, -983045, 0, 1, -983044, 0, 1, -983043, 0, 1, -983042, 0, 1, -983041, 0, 1, -1048576, 0, 131077, -1048575, 0, 65540, -1048574, 0, 65540, -1048573, 0, 65540, -1048572, 0, 65536, -1048571, 0, 65540, -1048570, 0, 65540, -917520, 0, 65540, -917519, 0, 65540, -917518, 0, 65540, -917517, 0, 65538, -917516, 0, 65540, -917515, 0, 65540, -917514, 0, 65540, -917513, 0, 65540, -917512, 0, 65540, -917511, 0, 65540, -917510, 0, 65540, -917509, 0, 65536, -917508, 0, 65540, -917507, 0, 65540, -917506, 0, 65538, -917505, 0, 65540, -983040, 0, 65540, -983039, 0, 65540, -983038, 0, 65540, -983037, 0, 65540, -983036, 0, 65536, -983035, 0, 65540, -983034, 0, 65540, -851984, 0, 65540, -851983, 0, 65540, -851982, 0, 65540, -851981, 0, 131075, -851980, 0, 2, -851979, 0, 196610, -851978, 0, 65540, -851977, 0, 65540, -851976, 0, 65540, -851975, 0, 65540, -851974, 0, 65540, -851973, 0, 65536, -851972, 0, 65540, -851971, 0, 65540, -851970, 0, 65538, -851969, 0, 65540, -917504, 0, 65540, -917503, 0, 65540, -917502, 0, 65540, -917501, 0, 65540, -917500, 0, 65536, -917499, 0, 65540, -917498, 0, 65540, -786448, 0, 65540, -786447, 0, 65540, -786446, 0, 65540, -786445, 0, 65540, -786444, 0, 65540, -786443, 0, 65538, -786442, 0, 65540, -786441, 0, 65540, -786440, 0, 0, -786439, 0, 1, -786438, 0, 1, -786437, 0, 65540, -786436, 1073741824, 196609, -786435, 1073741824, 196609, -786434, 1073741824, 196610, -786433, 0, 65540, -851968, 0, 65540, -851967, 0, 65540, -851966, 0, 65540, -851965, 0, 65540, -851964, 0, 65536, -851963, 0, 65540, -851962, 0, 65540, -720912, 0, 65540, -720911, 0, 65540, -720910, 0, 65540, -720909, 0, 65540, -720908, 0, 65540, -720907, 0, 65538, -720906, 0, 65540, -720905, 0, 65540, -720904, 0, 131072, -720903, 0, 131073, -720902, 0, 131073, -720901, 0, 131074, -720900, 0, 65540, -720899, 0, 65540, -720898, 0, 65540, -720897, 0, 65540, -786432, 0, 65540, -786431, 0, 65540, -786430, 0, 65540, -786429, 0, 65540, -786428, 0, 65536, -786427, 0, 65540, -786426, 0, 65540, -655376, 0, 65540, -655375, 0, 65540, -655374, 0, 65540, -655373, 1073741824, 131075, -655372, 1073741824, 196610, -655371, 0, 65540, -655370, 0, 65540, -655369, 0, 65540, -655368, 0, 65540, -655367, 0, 65540, -655366, 0, 65540, -655365, 0, 65540, -655364, 0, 65540, -655363, 0, 65540, -655362, 0, 65540, -655361, 0, 65540, -720896, 0, 65540, -720895, 0, 65540, -720894, 0, 65540, -720893, 0, 65540, -720892, 0, 65536, -720891, 0, 65540, -720890, 0, 65540, -589840, 0, 65540, -589839, 0, 65540, -589838, 0, 65540, -589837, 0, 65538, -589836, 0, 65540, -589835, 0, 65540, -589834, 0, 65540, -589833, 0, 65540, -589832, 0, 65540, -589831, 0, 65540, -589830, 0, 65540, -589829, 0, 65540, -589828, 0, 65540, -589827, 0, 65540, -589826, 0, 65540, -589825, 0, 65540, -655360, 0, 65540, -655359, 0, 65540, -655358, 0, 65540, -655357, 0, 65540, -655356, 0, 65536, -655355, 0, 65540, -655354, 0, 65540, -524304, 0, 65540, -524303, 0, 65540, -524302, 0, 65540, -524301, 0, 1, -524300, 0, 1, -524299, 0, 1, -524298, 0, 1, -524297, 0, 2, -524296, 0, 65540, -524295, 0, 65540, -524294, 0, 65540, -524293, 0, 65540, -524292, 0, 65540, -524291, 0, 65540, -524290, 0, 65540, -524289, 0, 65540, -589824, 0, 0, -589823, 0, 1, -589822, 0, 1, -589821, 0, 1, -589820, 0, 131077, -589819, 0, 65540, -589818, 0, 65540, -458768, 0, 65540, -458767, 0, 65540, -458766, 0, 65540, -458765, 0, 3, -458764, 0, 131073, -458763, 0, 131073, -458762, 0, 131073, -458761, 0, 131074, -458760, 0, 65540, -458759, 0, 65540, -458758, 0, 65540, -458757, 0, 65540, -458756, 0, 65540, -458755, 0, 65540, -458754, 0, 65540, -458753, 0, 65540, -524288, 0, 131072, -524287, 0, 131073, -524286, 0, 131073, -524285, 0, 131073, -524284, 0, 5, -524283, 0, 65540, -524282, 0, 65540, -393232, 0, 65540, -393231, 0, 65540, -393230, 0, 65540, -393229, 0, 65540, -393228, 0, 2, -393227, 0, 65540, -393226, 0, 65540, -393225, 0, 65540, -393224, 0, 65540, -393223, 0, 65540, -393222, 0, 65540, -393221, 0, 65540, -393220, 0, 65540, -393219, 0, 65540, -393218, 0, 65540, -393217, 0, 65540, -458752, 0, 65540, -458751, 0, 65540, -458750, 0, 65540, -458749, 0, 65540, -458748, 0, 65536, -458747, 0, 65540, -458746, 0, 65540, -327696, 0, 65540, -327695, 0, 65540, -327694, 0, 65540, -327693, 0, 65540, -327692, 0, 65538, -327691, 0, 65540, -327690, 0, 65540, -327689, 0, 65540, -327688, 0, 65540, -327687, 0, 0, -327686, 0, 1, -327685, 0, 1, -327684, 0, 1, -327683, 0, 2, -327682, 0, 65540, -327681, 0, 65540, -393216, 0, 65540, -393215, 0, 65540, -393214, 0, 65540, -393213, 0, 65540, -393212, 0, 65536, -393211, 0, 65540, -393210, 0, 65540, -262160, 0, 65540, -262159, 0, 65540, -262158, 0, 65540, -262157, 0, 65540, -262156, 0, 65538, -262155, 0, 65540, -262154, 0, 65540, -262153, 0, 65540, -262152, 0, 65540, -262151, 0, 131074, -262150, 0, 131073, -262149, 0, 131073, -262148, 0, 131073, -262147, 0, 131074, -262146, 0, 65540, -262145, 0, 65540, -327680, 0, 65540, -327679, 0, 65540, -327678, 0, 65540, -327677, 0, 65540, -327676, 0, 65536, -327675, 0, 65540, -327674, 0, 65540, -196624, 0, 65540, -196623, 0, 65540, -196622, 0, 65540, -196621, 0, 65540, -196620, 0, 65538, -196619, 0, 65540, -196618, 0, 65540, -196617, 0, 65540, -196616, 0, 65540, -196615, 0, 65540, -196614, 0, 65540, -196613, 0, 65540, -196612, 0, 65540, -196611, 0, 65540, -196610, 0, 65540, -196609, 0, 65540, -262144, 0, 0, -262143, 0, 1, -262142, 0, 1, -262141, 0, 1, -262140, 0, 131077, -262139, 0, 65540, -262138, 0, 65540, -131088, 0, 131073, -131087, 0, 131073, -131086, 0, 131073, -131085, 0, 131073, -131084, 0, 131074, -131083, 0, 65540, -131082, 0, 65540, -131081, 0, 65540, -131080, 0, 65540, -131079, 0, 65540, -131078, 0, 65540, -131077, 0, 65540, -131076, 0, 65540, -131075, 0, 65540, -131074, 0, 65540, -131073, 0, 65540, -196608, 0, 65536, -196607, 0, 65540, -196606, 0, 65540, -196605, 0, 65540, -196604, 0, 65540, -196603, 0, 65540, -196602, 0, 65540, -65552, 0, 65540, -65551, 0, 65540, -65550, 0, 65540, -65549, 0, 65540, -65548, 0, 65540, -65547, 0, 65540, -65546, 0, 65540, -65545, 0, 65540, -65544, 0, 65540, -65543, 0, 65540, -65542, 0, 65540, -65541, 0, 65540, -65540, 0, 65540, -65539, 0, 65540, -65538, 0, 65540, -65537, 0, 65540, -131072, 0, 65536, -131071, 0, 65540, -131070, 0, 65540, -131069, 0, 65540, -131068, 0, 65540, -131067, 0, 65540, -131066, 0, 65540, -16, 0, 65540, -15, 0, 65540, -14, 0, 65540, -13, 0, 65540, -12, 0, 65540, -11, 0, 65540, -10, 0, 65540, -9, 0, 65540, -8, 0, 65540, -7, 0, 65540, -6, 0, 65540, -5, 0, 65540, -4, 0, 65540, -3, 0, 65540, -2, 0, 65540, -1, 0, 65540, -65536, 0, 65536, -65535, 0, 65540, -65534, 0, 65540, -65533, 0, 65540, -65532, 0, 65540, -65531, 0, 65540, -65530, 0, 65540, 65520, 0, 0, 65521, 0, 0, 65522, 0, 1, 65523, 0, 1, 65524, 0, 1, 65525, 0, 1, 65526, 0, 1, 65527, 0, 1, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 131077, 1, 0, 65540, 2, 0, 65540, 3, 0, 65540, 4, 0, 65540, 5, 0, 65540, 6, 0, 65540 )

[node name="FrontMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1048577, 1, 0, -1114112, 1, 1, -1114111, 1, 1, -1114110, 1, 1, -1114109, 1, 1, -917511, 1, 0, -917510, 1, 1, -851975, 1, 65536, -720906, 1, 1, -720905, 1, 1, -589836, 1, 1, -589835, 1, 1, -589834, 1, 2, -458760, 1, 1, -458759, 1, 1, -458758, 1, 1, -458757, 1, 1, -458756, 1, 2, -393220, 1, 65538, -65540, 1, 0, -65539, 1, 1, -65538, 1, 1, -65537, 1, 1, -4, 1, 65536 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( -256, -32 )

[node name="MainCamera" type="Camera2D" parent="player"]
current = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 1 )

[node name="camera_limit_L" type="Position2D" parent="."]
position = Vector2( -472, -736 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="camera_limit_R" type="Position2D" parent="."]
position = Vector2( 160, 32 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="initial_position" type="Position2D" parent="."]
position = Vector2( -368, -32 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="end_position" type="Position2D" parent="."]
position = Vector2( -440, -672 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="enemy" type="Node2D" parent="."]

[node name="haniwa_guard" parent="enemy" instance=ExtResource( 5 )]
position = Vector2( -184, -256 )

[node name="haniwa_guard2" parent="enemy" instance=ExtResource( 5 )]
position = Vector2( 56, -288 )

[node name="haniwa_guard3" parent="enemy" instance=ExtResource( 5 )]
position = Vector2( 48, -544 )

[node name="begin" type="Area2D" parent="."]
position = Vector2( -496, -48 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="collider" type="CollisionShape2D" parent="begin"]
shape = SubResource( 1 )

[node name="end" type="Area2D" parent="."]
position = Vector2( -504, -664 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="collider" type="CollisionShape2D" parent="end"]
shape = SubResource( 1 )

[connection signal="body_entered" from="begin" to="." method="_on_begin_body_entered"]
[connection signal="body_entered" from="end" to="." method="_on_end_body_entered"]
